调整 `usecases`
